--- a/head_common.twig
+++ b/head_common.twig
@@ -1179,6 +1179,11 @@ a[href]:hover {
   flex-wrap: wrap;
 }
 
+.sp-message-header .sp-description {
+  margin-left: auto;
+  text-align: right;
+}
+
 .sp-message-header .sp-name {
   font-weight: 600;
   color: white;
@@ -1196,7 +1201,8 @@ a[href]:hover {
 .sp-message-text {
   color: #d1d5db;
   line-height: 1.6;
-  padding-left: 0 !important; /* Left-aligned */
+  padding-left: 0 !important;
+  text-align: left !important;
 }
 
 .sp-message-text p {
