--- a/ticket/message.twig
+++ b/ticket/message.twig
@@ -35,7 +35,7 @@
 
 	{% if not message.attachments.isEmpty() %}
 		<ul class="sp-attachments">
-			<hr class="sp-mx-0 sp-my-3 sp-border-secondary" />
+			<hr class="sp-mx-0 sp-my-3" style="border-color: rgba(168, 85, 247, 0.2);" />
 
 			<div class="sp-flex">
 				<div class="sp-grow">
@@ -55,14 +55,16 @@
 			{% for attachment in message.attachments %}
 				<li class="sp-relative" data-download-url="{{ attachment.direct_frontend_url }}" data-filename="{{ attachment.original_name }}">
                     {% if message.by != 0 %}
-						<div class="sp-delete-attachment sp-absolute sp-end-0 sp-px-2 sp-py-1/2 sp-bg-red-600 sp-rounded-se
-                                sp-text-white sp-cursor-pointer sp-z-10 hover:sp-bg-red-800"
+						<div class="sp-delete-attachment" style="position: absolute; top: 0.5rem; right: 0.5rem;"
 							 title="{{ Lang.get('general.delete') }}"
 							 data-url="{{ route('ticket.frontend.attachment.destroy') }}"
                              data-token="{{ Request.input('token', '') }}"
                              data-attachment-id="{{ attachment.id }}"
                              data-hash="{{ attachment.upload_hash }}">
-							<i class="fas fa-times"></i>
+							<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: #ef4444;">
+								<path d="M18 6 6 18"/>
+								<path d="m6 6 12 12"/>
+							</svg>
 						</div>
 					{% endif %}
 
@@ -105,9 +107,9 @@
 								</div>
 							</div>
 
-							<div>
+							<div style="background: rgba(31, 41, 55, 0.5); padding: 0.5rem; border-radius: 0.375rem;">
 								<div class="sp-attachment-name">{{ attachment.original_name }}</div>
-								<div class="sp-description">{{ attachment.upload.size }}</div>
+								<div class="sp-description" style="color: #9ca3af;">{{ attachment.upload.size }}</div>
 							</div>
 						</a>
 				</li>
