--- a/ticket/ticket_messages.twig
+++ b/ticket/ticket_messages.twig
@@ -1,4 +1,5 @@
 <div class="sp-messages-container" data-position="inline">
+    <h2 style="font-size: 1.5rem; font-weight: 600; color: white; margin-bottom: 1.5rem; font-family: var(--font-playfair);">Reply History</h2>
     {% for message in messages %}
         {% if loop.last %}
             {% set unread = true %}
