--- a/ticket/message.twig
+++ b/ticket/message.twig
@@ -100,9 +100,9 @@
 								</div>
 							</div>
 
-							<div style="background: rgba(31, 41, 55, 0.5); padding: 0.5rem; border-radius: 0.375rem;">
+							<div>
 								<div class="sp-attachment-name">{{ attachment.original_name }}</div>
-								<div class="sp-description" style="color: #9ca3af;">{{ attachment.upload.size }}</div>
+								<div class="sp-description">{{ attachment.upload.size }}</div>
 							</div>
 						</a>
 				</li>
